--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h> My first sweet Git project</h>
+    <h> My first Git project</h>
     
 </body>
 </html>
